@@ -2,7 +2,7 @@ DIST font-arial-cp1250.tar.bz2 249705 RMD160 a2fc7ae07b0d80936ea58e168e1047efccb
 DIST font-arial-iso-8859-1.tar.bz2 234242 RMD160 666697cd5efd9387057a898c714175e7c2aacbcd SHA1 152c40bf20de34aa8802d7f80d34d673b0b67212 SHA256 9730f481764f367c9089d0166fb6ccf9148808ffbbfeca635cf0e6db75765d29
 DIST font-arial-iso-8859-2.tar.bz2 222208 RMD160 562d4d92c4f5f3d537340fde3ad8d1495ac41acb SHA1 7b99bbe0e9ba89a57eccbea8f93c453c4f268181 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
 DIST mplayer2-build-2.0.tar.xz 7424672 RMD160 48193cf6a48e16cce7f74d8f0915e64dc4b7d1cd SHA1 951bc88cdaa486044a32e66293bdcb5bfd17f759 SHA256 e0a4dba087ba8c6a916d8bc9c7063bd2fd86d36bb08e31a2bd2d82e56b3c4058
-EBUILD mplayer2-2.0.ebuild 21479 RMD160 6a686bdcb61da8923e1471ba39cb6050dfbc5c0e SHA1 930914eadc7bbfda2ea3a5f36a5c164585b2863c SHA256 7734c3c79453e0f6a2e3a41fffa7d7cc88ed33cf9a8b80c65db403ed2aed0509
-EBUILD mplayer2-9999.ebuild 21484 RMD160 0af556dd270af850abfe96758a716a84ce908ffc SHA1 8e8b9a0e3c84d4b4d4587e22494026d5b22c7c05 SHA256 c6c5fe89d327c8b6b7f66b5dc866edc5fe4e3b6b6e0f58d36955bb02eb9ab435
-MISC ChangeLog 3434 RMD160 30dd6ced4855f749465e613973c372a0bb50babc SHA1 2bdd49bef770dd91d0cd09f27e6d0418d212274e SHA256 b274856cf6c773259a905bc4f27ca1d7223edbbb7d50dfc61045a3b65a076c96
+EBUILD mplayer2-2.0.ebuild 21469 RMD160 841a70d96991c164bb3ee97ff05ad33fbb7a9448 SHA1 0ff64aea911fce9d395f48b738cbbf4dff2670a3 SHA256 564f1b642f94c7b7c24f5dbbeb6d96eded17f979108031d1876d358dc7aef842
+EBUILD mplayer2-9999.ebuild 21474 RMD160 34979cb61b4feeedf5028edf933a7ca93d3a9461 SHA1 cb7f06f46b2cc28bcc4956389d45d442d57ea514 SHA256 574925864a0cc338bca6ebc5bf42730287e80aae93a7bcb352caa574d2d7faa2
+MISC ChangeLog 3558 RMD160 ed7fbc011ad2600022347a62729aa81ca835c2ab SHA1 d0b7b12d391a4396efd7223b7c5e5981459875c2 SHA256 28c2a6cea257a981b1dd6571b1298dac88ccf15fd3092314a54be942bc82b0e6
 MISC metadata.xml 4481 RMD160 70bc6562c355733582603d3df112f8f8220719b4 SHA1 2f381505a009789cd5a03c66cb54ebb0a30f2b41 SHA256 cded5709f2c9352c74790dc456de16f5b7d190b9593562f04ed761e5b941165c
